<resources>
    <string name="app_name">TestProject</string>
    <string name="id">ID</string>
    <string name="fName">First name</string>
    <string name="lName">Last name</string>
    <string name="phone">Phone</string>
    <string name="insert">Insert</string>
    <string name="loadAll">LoadAll</string>
    <string name="update">Update by id</string>
    <string name="delete">Delete by id</string>
</resources>
